--- a/home.html
+++ b/home.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="html">
+  <head>
+    <link rel="stylesheet" href="home.css">
+    <link rel="shortcut icon" type="image/jpg" href="svIcon.png"></link>
+    <title>SimVascular</title>
+  </head>
   <body>
-    <h1>slay</h1>
-    <p>slay two</p>
+    <!-- bookmarks -->
+    <div class="skippyskip">
+      <a class="active" href="#home">Home</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#download">Download</a>
+      <a href="#documentation">Documentation</a>
+      <a href="#tutor">Online Tutorials</a>
+      <a href="#workshops">Workshops</a>
+    </div>
+    <img src="svLogoTitle.png" alt="SimVascular Logo"></img>
+    <h1 #home>Home</h1>
+    <h1 #gallery>Gallery</h1>
+    <h1 #download>Download</h1>
+    <h1 #documentation>Documentation</h1>
+    <h1 #tutor>Online Tutorials</h1>
+    <h1 #repository>Repository</h1>
+    <h1 #team>Team</h1>
+    <h1 #workshops>Workshops</h1>
   </body>
 </html>
