--- a/home.html
+++ b/home.html
@@ -8,21 +8,107 @@
   <body>
     <!-- bookmarks -->
     <div class="skippyskip">
-      <a class="active" href="#home">Home</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#download">Download</a>
-      <a href="#documentation">Documentation</a>
-      <a href="#tutor">Online Tutorials</a>
-      <a href="#workshops">Workshops</a>
+      <a class="navy active" href="#home">Home</a>
+      <a class="navy" href="#gallery">Gallery</a>
+      <a class="navy" href="#download">Download</a>
+      <a class="navy" href="#documentation">Documentation</a>
+      <a class="navy" href="#tutor">Online Tutorials</a>
+      <a class="navy" href="#repository">Repository</a>
+      <a class="navy" href="#workshops">Workshops</a>
+      <a class="navy" href="#team">Team</a>
+      <a class="navy" href="#contact">Contact</a>
     </div>
-    <img src="svLogoTitle.png" alt="SimVascular Logo"></img>
-    <h1 #home>Home</h1>
+    <div class="row">
+      <div class="column left">
+        <img class="homeLogo" src="svLogoTitle.png" alt="SimVascular Logo"></img>
+        <p>The only fully opensource software package providing a complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
+        <p>The <a href="https://gateway.simvascular.org/">SimVascular Supercomputing Gateway</a> provides access to High-Performance Computing (HPC) clusters for running simulations using SimVascular CFD solvers. Simulations benefit from the performance levels that only large-scale HPC systems can offer and typically run an order of magnitude faster than on most workstations.</p>
+      </div>
+      <div class="column right">
+        <div class="twitterBox">boxy box</div>
+      </div>
+    </div>
+    <img class="creditsLogo" src="stanfordmedicine.png" alt="Logo for Stanford Medicine"></img>
+    <img class="creditsLogo" src="ucberkeley.png" alt="Logo for UC Berkeley"></img>
+    <img class="creditsLogo" src="osmsc.png" alt="Logo for osmsc"></img>
+    <img class="creditsLogo" src="nsf.jpg" alt="Logo for NSF"></img>
+    <img class="creditsLogo" src="simtk.png" alt="Logo for SimTK"></img>
+
     <h1 #gallery>Gallery</h1>
+    <h2 class="boxybox">picture gallery</h2>
+    <h2 class="boxybox">animation gallery</h2>
     <h1 #download>Download</h1>
+    <h2 class="boxybox">USERS: DOWNLOAD INSTALLER PACKAGES</h2>
+    <h2 class="boxybox">DEVELOPERS: VISIT OUR SOURCE CODE REPOSITORY</h2>
     <h1 #documentation>Documentation</h1>
+    <div class="columnForGuides">
+      <div>
+        <h2>user guides</h2>
+        <ul>
+          <li>listy list</li>
+          <li>listy list</li>
+        </ul>
+      </div>
+      <div>
+        <h2>clinical case studies</h2>
+        <ul>
+          <li>listy list</li>
+          <li>listy list</li>
+        </ul>
+      </div>
+      <div>
+        <h2>developer guides</h2>
+        <ul>
+          <li>listy list</li>
+          <li>listy list</li>
+        </ul>
+      </div>
+    </div>
     <h1 #tutor>Online Tutorials</h1>
+    <p>The <a href="https://www.youtube.com/channel/UCT61XgTRqpfb39Hyio9IqGQ">SimVascular YouTube Channel</a> has a collection of videos on a variety of topics related to the use of the SimVascular suite of software applications.</p>
+    <p>The <a href="https://www.youtube.com/playlist?list=PL1CBZ8Wh-xvSKUsuBA4MM4Jba-psVdxXT">SimVascular Tutorial series</a> consists of recent videos demonstrating the complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
     <h1 #repository>Repository</h1>
-    <h1 #team>Team</h1>
+    <div class="row">
+      <div class="columnImg">
+        <img src="repbanner3.png" alt="a head">
+      </div>
+      <div class="columnDesc">
+        <h2>WHAT IS IT</h2>
+        <p>The vascular model repository, a sister project of SimVascular, is a library of computational models of normal and diseased human cardiovascular and pulmonary anatomy and input and output boundary conditions for various physiologic states. These models can be used to simulate cardiovascular and pulmonary solid and fluid mechanics and will provide spatially and temporally-resolved benchmark solutions that can be used by academic, government and industry researchers to verify their computational methods. Most models in the repository were created with SimVascular. The SimVascular project provides an open source package for simulation to accompany the data provided in the model repository.</p>
+        <img class="imgVMR" src="image1.png" alt="">
+        <img class="imgVMR" src="model1.png" alt="">
+        <img class="imgVMR" src="result1.png" alt="">
+      </div>
+    </div>
     <h1 #workshops>Workshops</h1>
+      <p>UPCOMING WORKSHOPS</p>
+      <p>LEARN ABOUT SIMVASCULAR BY ATTENDING ONE OF OUR WORKSHOPS</p>
+      <p>SB3C POST-CONFERENCE COMPUTATIONAL WORKSHOP, JUNE 23, 2022</p>
+    <h1 #team>Team</h1>
+      <h2 class="boxybox">the bio notes don't work :/</h2>
+    <h1 #contact>Contact Us</h1>
+    <h2>We want your feedback *beady eyes*</h2>
+    <div>
+      <h2>news mailing list</h2>
+      <ul>
+        <li>sign up pretty please</li>
+        <li>did you hear the news??? you could have if you had signed up</li>
+      </ul>
+    </div>
+    <div>
+      <h2>public forum</h2>
+      <ul>
+        <li>community building</li>
+        <li>listy list</li>
+      </ul>
+    </div>
+    <div>
+      <h2>suggestions!</h2>
+      <ul>
+        <li>what ideas do you have</li>
+        <li>listy list</li>
+      </ul>
+    </div>
+    <h1>COPYRIGHT © SIMVASCULAR DEVELOPMENT TEAM - 2017</h1>
   </body>
 </html>
