--- a/home.html
+++ b/home.html
@@ -34,13 +34,13 @@
     <img class="creditsLogo" src="nsf.jpg" alt="Logo for NSF"></img>
     <img class="creditsLogo" src="simtk.png" alt="Logo for SimTK"></img>
 
-    <h1 #gallery>Gallery</h1>
+    <h1 id="gallery">Gallery</h1>
     <h2 class="boxybox">picture gallery</h2>
     <h2 class="boxybox">animation gallery</h2>
-    <h1 #download>Download</h1>
+    <h1 id="download">Download</h1>
     <h2 class="boxybox">USERS: DOWNLOAD INSTALLER PACKAGES</h2>
     <h2 class="boxybox">DEVELOPERS: VISIT OUR SOURCE CODE REPOSITORY</h2>
-    <h1 #documentation>Documentation</h1>
+    <h1 id="documentation">Documentation</h1>
     <div class="columnForGuides">
       <div>
         <h2>user guides</h2>
@@ -64,10 +64,10 @@
         </ul>
       </div>
     </div>
-    <h1 #tutor>Online Tutorials</h1>
+    <h1 id="tutor">Online Tutorials</h1>
     <p>The <a href="https://www.youtube.com/channel/UCT61XgTRqpfb39Hyio9IqGQ">SimVascular YouTube Channel</a> has a collection of videos on a variety of topics related to the use of the SimVascular suite of software applications.</p>
     <p>The <a href="https://www.youtube.com/playlist?list=PL1CBZ8Wh-xvSKUsuBA4MM4Jba-psVdxXT">SimVascular Tutorial series</a> consists of recent videos demonstrating the complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
-    <h1 #repository>Repository</h1>
+    <h1 id="repository">Repository</h1>
     <div class="row">
       <div class="columnImg">
         <img src="repbanner3.png" alt="a head">
@@ -80,13 +80,13 @@
         <img class="imgVMR" src="result1.png" alt="">
       </div>
     </div>
-    <h1 #workshops>Workshops</h1>
+    <h1 id="workshops">Workshops</h1>
       <p>UPCOMING WORKSHOPS</p>
       <p>LEARN ABOUT SIMVASCULAR BY ATTENDING ONE OF OUR WORKSHOPS</p>
       <p>SB3C POST-CONFERENCE COMPUTATIONAL WORKSHOP, JUNE 23, 2022</p>
-    <h1 #team>Team</h1>
+    <h1 id="team">Team</h1>
       <h2 class="boxybox">the bio notes don't work :/</h2>
-    <h1 #contact>Contact Us</h1>
+    <h1 id="contact">Contact Us</h1>
     <h2>We want your feedback *beady eyes*</h2>
     <div>
       <h2>news mailing list</h2>
