--- a/index.html
+++ b/index.html
@@ -8,36 +8,78 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+  <!-- Custom Fonts -->
+  <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="//vjs.zencdn.net/4.8/video-js.css" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  
-    <!-- Style CSS -->  
-    <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/grayscale.css">
+    <link rel="stylesheet" href="css/home.css">
+
 
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="svIcon.png"></link>
     <title>SimVascular</title>
   </head>
   <body>
-    <section class="headerBar">
-      <!-- bookmarks -->
-      <div class="skippyskip">
-        <a class="navy" href="#home">Home</a>
-        <a class="navy" href="#gallery">Gallery</a>
-        <a class="navy" href="#download">Download</a>
-        <a class="navy" href="#documentation">Documentation</a>
-        <a class="navy" href="#tutor">Online Tutorials</a>
-        <a class="navy" href="#repository">Repository</a>
-        <a class="navy" href="#workshops">Workshops</a>
-        <a class="navy" href="#team">Team</a>
-        <a class="navy" href="#contact">Contact</a>
-      </div>
+<section class="navigationSection">
+  <nav>
+    <i class="fa-solid fa-bars" id="iconForSkip"></i>
+    <table id="contentOfSkip">
+      <tr>
+        <th>
+          <a class="skipItem" href="#home">Skip to Top</a>
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <a class="skipItem" href="#gallery">Gallery</a>
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <a class="skipItem" href="#download">Download</a>
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <a class="skipItem" href="#documentation">Documentation</a>
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <a class="skipItem" href="#tutor">Online Tutorials</a>
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <a class="skipItem" href="#repository">Repository</a>
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <a class="skipItem" href="#workshops">Workshops</a>
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <a class="skipItem" href="#team">Team</a>
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <a class="skipItem" href="#contact">Contact</a>
+        </th>
+      </tr>
+    </table>
+  </nav>
+</section>
+    <section class="topLeftLogo">      
       <div class="headerLogoContainer">
         <img class="headerLogoImage" src="svLogoTitle.png" alt="SimVascular Logo"></img>
       </div>
@@ -167,5 +209,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
     
+    <!-- <script src="js/jquery-2.1.1.js"></script> -->
+    <script src="js/jquery.mixitup.min.js"></script>
+
+    <script src="js/home.js"></script>
+
+
+    <!--  -->
   </body>
 </html>
