attempt at a nav bar

--- a/index.html
+++ b/index.html
@@ -29,54 +29,61 @@
   <body>
 <section class="navigationSection">
   <nav>
-    <i class="fa-solid fa-bars" id="iconForSkip"></i>
-    <table id="contentOfSkip">
-      <tr>
-        <th>
-          <a class="skipItem" href="#home">Skip to Top</a>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <a class="skipItem" href="#gallery">Gallery</a>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <a class="skipItem" href="#download">Download</a>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <a class="skipItem" href="#documentation">Documentation</a>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <a class="skipItem" href="#tutor">Online Tutorials</a>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <a class="skipItem" href="#repository">Repository</a>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <a class="skipItem" href="#workshops">Workshops</a>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <a class="skipItem" href="#team">Team</a>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <a class="skipItem" href="#contact">Contact</a>
-        </th>
-      </tr>
-    </table>
+    <div class="row">
+      <div class="colContainsIcon">
+        <i class="fa-solid fa-bars" id="iconForSkip"></i>
+      </div>
+      <div class="colContainsContent">
+        <table id="contentOfSkip">
+            <tr>
+              <th>
+                <a class="skipItem" href="#home">Skip to Top</a>
+              </th>
+            </tr>
+            <tr>
+              <th>
+                <a class="skipItem" href="#gallery">Gallery</a>
+              </th>
+            </tr>
+            <tr>
+              <th>
+                <a class="skipItem" href="#download">Download</a>
+              </th>
+            </tr>
+            <tr>
+              <th>
+                <a class="skipItem" href="#documentation">Documentation</a>
+              </th>
+            </tr>
+            <tr>
+              <th>
+                <a class="skipItem" href="#tutor">Online Tutorials</a>
+              </th>
+            </tr>
+            <tr>
+              <th>
+                <a class="skipItem" href="#repository">Repository</a>
+              </th>
+            </tr>
+            <tr>
+              <th>
+                <a class="skipItem" href="#workshops">Workshops</a>
+              </th>
+            </tr>
+            <tr>
+              <th>
+                <a class="skipItem" href="#team">Team</a>
+              </th>
+            </tr>
+            <tr>
+              <th>
+                <a class="skipItem" href="#contact">Contact</a>
+              </th>
+            </tr>
+        </table>
+      </div>
+    
+    </div>
   </nav>
 </section>
     <section class="topLeftLogo">      
