download section links

--- a/index.html
+++ b/index.html
@@ -149,13 +149,26 @@
     </div>
 
     <div class="newSectionHeader">
-      <h1 id="download">Download</h1>
+      <h1 id="download">Download Simvascular</h1>
     </div>
     <div class="newSectionContent">
-      <h2 class="boxybox">USERS: DOWNLOAD INSTALLER PACKAGES</h2>
-      <h2 class="boxybox">DEVELOPERS: VISIT OUR SOURCE CODE REPOSITORY</h2>
+      <div class="License">License</div>
+      <div style="width: 100%; height: 100%; display:block; float: left;">
+        <div class="box1 col-sm-6 col-12">
+          <h2>Users</h2>
+        </div>
+        <div class="box2 col-sm-6 col-12">
+          <a class="downloadLinks" href="https://simtk.org/frs/index.php?group_id=188">Download Installation Package</a>
+          <a class="downloadLinks" href="https://simtk.org/frs/index.php?group_id=188">Download Example Projects</a>
+        </div>
+        <div class="box3 col-sm-6 col-12">
+          <h2>Developers</h2>
+        </div>
+        <div class="box4 col-sm-6 col-12">
+          <a class="downloadLinks" href="https://github.com/SimVascular/SimVascular">Source Code Repository</a>
     </div>
-
+    </div>
+</div>
 
     <div class="newSectionHeader">
       <h1 id="documentation">Documentation</h1>
