--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         </div>
       <div class="firstHeader">
         <div class="twitterContainer col-lg-4">
-          <a class="twitter-timeline" data-lang="en" data-theme="dark" href="https://twitter.com/simvascular?ref_src=twsrc%5Etfw">Tweets by simvascular</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      <!-- opening logo -->
+          <a target="_blank" class="twitter-timeline" data-lang="en" data-theme="dark" href="https://twitter.com/simvascular?ref_src=twsrc%5Etfw">Tweets by simvascular</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      <!-- opening logo -->
         </div>
         <div class="introDescription col-lg-8">
-          <p>The only fully opensource software package providing a complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
-          <p>The <a href="https://gateway.simvascular.org/">SimVascular Supercomputing Gateway</a> provides access to High-Performance Computing (HPC) clusters for running simulations using SimVascular CFD solvers. Simulations benefit from the performance levels that only large-scale HPC systems can offer and typically run an order of magnitude faster than on most workstations.</p>
+          <p class="paddingIntro">The only fully opensource software package providing a complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
+          <p class="paddingIntro">The <a target="_blank" href="https://gateway.simvascular.org/">SimVascular Supercomputing Gateway</a> provides access to High-Performance Computing (HPC) clusters for running simulations using SimVascular CFD solvers. Simulations benefit from the performance levels that only large-scale HPC systems can offer and typically run an order of magnitude faster than on most workstations.</p>
         
           <div class="row creditsRow">
             <div class="threeTopImages col-sm-4 creditContainer">
@@ -152,79 +152,189 @@
       <h1 id="download">Download Simvascular</h1>
     </div>
     <div class="newSectionContent">
-      <div class="License">License</div>
+      <div>
+        <div style="width: 100%">
+          <h4 class="media-heading centerTitleText" id="licenseTerms">License Terms</h4>
+        </div>
+        <div class="media-body" id="toggleLicense" style="display: none">
+          <div class="BioPar justifiedText">
+            <h6 class="media-heading text-Left top-buffer">SimVascular components svModel, svMesh, svPre, and svPost are provided under the full BSD license subject to the terms below:</h6>
+            <p class="LegalStuff">
+              Copyright © 1998-2007 Stanford University, Charles Taylor, Nathan Wilson, Ken Wang. See SimVascular Acknowledgements file for additional contributors to the source code.
+              <br>
+              <br>
+              Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+              <br>
+              <br>
+              The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+              <br>
+              <br>
+              THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+            </p>
+            <h6 class="media-heading text-Left">The SimVascular solver, including svSolver and svLS, is provided under a modified BSD-license subject to the permissions below:</h6>
+            <p class="LegalStuff">
+              This software is Copyright © 2014 The Regents of the University of California. All Rights Reserved.
+              Permission to copy, modify, and distribute this software and its documentation for educational, research and non-profit purposes, without fee, and without a  written agreement is hereby granted, provided that the above copyright notice, this paragraph and the following three paragraphs appear in all copies.
+              <br>
+              <br>
+              Permission to make commercial use of this software may be obtained by contacting:
+              <br>
+              <br>
+              Technology Transfer Office<br>
+              9500 Gilman Drive, Mail Code 0910<br>
+              University of California<br>
+              La Jolla, CA 92093-0910<br>
+              (858) 534-5815<br>
+              invent@ucsd.edu
+              <br>
+              <br>
+              This software program and documentation are copyrighted by The Regents of the University of California. The software program and documentation are supplied "as is", without any accompanying services from The Regents. The Regents does not warrant that the operation of the program will be uninterrupted or error-free. The end-user understands that the program was developed for research purposes and is advised not to rely exclusively on the program for any reason.
+              <br>
+              <br>
+              IN NO EVENT SHALL THE UNIVERSITY OF CALIFORNIA BE LIABLE TO ANY PARTY FOR DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, INCLUDING LOST PROFITS, ARISING OUT OF THE USE OF THIS SOFTWARE AND ITS DOCUMENTATION, EVEN IF THE UNIVERSITY OF CALIFORNIA HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. THE  UNIVERSITY OF CALIFORNIA SPECIFICALLY DISCLAIMS ANY WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE SOFTWARE PROVIDED HEREUNDER IS ON AN "AS IS" BASIS, AND THE UNIVERSITY OF CALIFORNIA HAS NO OBLIGATIONS TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS.
+            </p>
+            <h6 class="media-heading text-Left">Licensing terms for external open source packages</h6>
+            <p class="LegalStuff">
+              ITK: <a target="_blank" href="http://www.itk.org/ITK/project/license.html">http://www.itk.org/ITK/project/license.html</a><br>
+              VTK: <a target="_blank" href="http://www.vtk.org/VTK/project/license.html">http://www.vtk.org/VTK/project/license.html</a><br>
+              Tetgen: <a target="_blank" href="http://wias-berlin.de/software/tetgen/1.5/agpl-3.0-standalone.html">http://wias-berlin.de/software/tetgen/1.5/agpl-3.0-standalone.html</a><br>
+            </p>
+            <h6 class="media-heading text-Left">Commercial components</h6>
+            <p class="LegalStuff">
+              MeshSim users should contact simmetrix for licensing information.
+            </p>
+            <h6 class="media-heading text-Left">Additional license information</h6>
+            <p class="LegalStuff">
+              Please see the additional license information contained in the SimVascular source code.
+            </p>
+          </div>
+        </div>
+      </div>
       <div style="width: 100%; height: 100%; display:block; float: left;">
         <div class="box1 col-sm-6 col-12">
           <h2>Users</h2>
         </div>
         <div class="box2 col-sm-6 col-12">
-          <a class="downloadLinks" href="https://simtk.org/frs/index.php?group_id=188">Download Installation Package</a>
-          <a class="downloadLinks" href="https://simtk.org/frs/index.php?group_id=188">Download Example Projects</a>
+          <a class="downloadLinks" target="_blank" href="https://simtk.org/frs/index.php?group_id=188">Download Installation Package</a>
+          <a class="downloadLinks" target="_blank" href="https://simtk.org/frs/index.php?group_id=188">Download Example Projects</a>
         </div>
         <div class="box3 col-sm-6 col-12">
           <h2>Developers</h2>
         </div>
         <div class="box4 col-sm-6 col-12">
-          <a class="downloadLinks" href="https://github.com/SimVascular/SimVascular">Source Code Repository</a>
+          <a class="downloadLinks" target="_blank" href="https://github.com/SimVascular/SimVascular">Source Code Repository</a>
     </div>
     </div>
 </div>
-
     <div class="newSectionHeader">
       <h1 id="documentation">Documentation</h1>
     </div>
     <div class="newSectionContent">
-      <div class="columnForGuides">
-        <div>
-          <h2>user guides</h2>
-          <ul>
-            <li>listy list</li>
-            <li>listy list</li>
-          </ul>
+      <details class="containingDocsSection">
+        <summary class="docHeader">
+          <h4 class="media-heading">User Guides</h4>
+        </summary>
+        <div class="docSection">
+          <h6 class="media-heading">
+            <a target="_blank" href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docsQuickGuide.html">Getting Started</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docsModelGuide.html">Modeling Guide</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docsMeshing.html">Meshing Guide</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docsFlowSolver.html">Simulation Guide</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docssvFSI.html">svFSI Guide</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docsSimCardio.html">SimCardio Guide</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docsROMSimulation.html">ROM Simulation Guide</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docsGenBC.html">General B.C. Guide</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docsPythonInterface.html">Python Interface</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="docsReferences.html">References</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
+          </h6><br>
         </div>
-        <div>
-          <h2>clinical case studies</h2>
-          <ul>
-            <li>listy list</li>
-            <li>listy list</li>
-          </ul>
+      </details>
+      <details class="containingDocsSection">
+        <summary class="docHeader">
+          <h4 class="media-heading">Clinical Case Studies</h4> 
+        </summary>
+        <div class="docSection">
+          <h6 class="media-heading">
+            <a target="_blank" href="clinicalCase3.html">Coronary Normal</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="clinicalCase1.html">Aortofemoral Normal - 1</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="clinicalCase2.html">Aortofemoral Normal - 2</a>
+          </h6><br>
+          <h6 class="media-heading">
+            <a target="_blank" href="clinicalCase4.html">Healthy Pulmonary</a>
+          </h6>
         </div>
-        <div>
-          <h2>developer guides</h2>
-          <ul>
-            <li>listy list</li>
-            <li>listy list</li>
-          </ul>
-        </div>
-      </div>
-    </div>
+      </details>
+      <details class="containingDocsSection">
+        <summary class="docHeader">
+          <h4 class="media-heading">Developer Guides</h4>
+        </summary>
+        <div class="docSection">
+          <h6 class="media-heading">
+            <a target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Building SimVascular from Source</a>
+          </h6></div>
+      </details>
+    </div> 
 
     <div class="newSectionHeader">
       <h1 id="tutor">Online Tutorials</h1>
     </div>
 
     <div class="newSectionContent">
-      <p>The <a href="https://www.youtube.com/channel/UCT61XgTRqpfb39Hyio9IqGQ">SimVascular YouTube Channel</a> has a collection of videos on a variety of topics related to the use of the SimVascular suite of software applications.</p>
-      <p>The <a href="https://www.youtube.com/playlist?list=PL1CBZ8Wh-xvSKUsuBA4MM4Jba-psVdxXT">SimVascular Tutorial series</a> consists of recent videos demonstrating the complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
+      <div>
+        <p class="paddingTutor">The <a target="_blank" href="https://www.youtube.com/channel/UCT61XgTRqpfb39Hyio9IqGQ">SimVascular YouTube Channel</a> has a collection of videos on a variety of topics related to the use of the SimVascular suite of software applications.</p>
+        <p class="paddingTutor">The <a target="_blank" href="https://www.youtube.com/playlist?list=PL1CBZ8Wh-xvSKUsuBA4MM4Jba-psVdxXT">SimVascular Tutorial series</a> consists of recent videos demonstrating the complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
+      </div>
+      <div class="embedYTVideo">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PL1CBZ8Wh-xvSKUsuBA4MM4Jba-psVdxXT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
     </div>
     
     <div class="newSectionHeader">
       <h1 id="repository">Repository</h1>
     </div>
-    <div class="newSectionContent">
-      <div class="row">
-        <div class="columnImg">
-          <img src="img/repbanner3.png" alt="a head">
+      <div class="newSectionContent">
+        <!-- <img src="img/repbanner3.png" alt="a head"> -->
+        <div class="col-sm-6 col-12">
+          <div class="subHeader">
+            <h2>WHAT IS IT</h2>
+          </div>
+          <p class="paddingTutor">The <a href="https://www.vascularmodel.com/" target="_blank">Vascular Model Repository</a>, a sister project of SimVascular, is a library of computational models of normal and diseased human cardiovascular and pulmonary anatomy and input and output boundary conditions for various physiologic states. These models can be used to simulate cardiovascular and pulmonary solid and fluid mechanics and will provide spatially and temporally-resolved benchmark solutions that can be used by academic, government and industry researchers to verify their computational methods. Most models in the repository were created with SimVascular. The SimVascular project provides an open source package for simulation to accompany the data provided in the model repository.</p>  
         </div>
-        <div class="columnDesc">
-          <h2>WHAT IS IT</h2>
-          <p>The vascular model repository, a sister project of SimVascular, is a library of computational models of normal and diseased human cardiovascular and pulmonary anatomy and input and output boundary conditions for various physiologic states. These models can be used to simulate cardiovascular and pulmonary solid and fluid mechanics and will provide spatially and temporally-resolved benchmark solutions that can be used by academic, government and industry researchers to verify their computational methods. Most models in the repository were created with SimVascular. The SimVascular project provides an open source package for simulation to accompany the data provided in the model repository.</p>
-          <img class="imgVMR" src="img/image1.png" alt="">
-          <img class="imgVMR" src="img/model1.png" alt="">
-          <img class="imgVMR" src="img/result1.png" alt="">
+        <div class="embedVMR col-sm-6 col-12">
+          <embed type="text/html" src="https://www.vascularmodel.com/" width="100%" height="100%">
         </div>
+        <!-- <img class="imgVMR" src="img/image1.png" alt="">
+        <img class="imgVMR" src="img/model1.png" alt="">
+        <img class="imgVMR" src="img/result1.png" alt=""> -->
       </div>
-    </div>
 
     <div class="newSectionHeader">
       <h1 id="workshops">Workshops</h1>
