bios except still missing links

--- a/index.html
+++ b/index.html
@@ -374,6 +374,114 @@
     <div class="newSectionHeader">
       <h1 id="team">Team</h1>
     </div>
+    <div class="team-container">
+      <div class="row">
+      <div class="col-md-4 col-6">
+        <div class="team-item">
+          <div class="team-triangle">
+            <div class="team-content">
+              <img src="img/amarsden.jpeg" alt="Image of Alison Marsden">
+              <div class="team-hover text-center"  style="cursor:pointer" id="amarsden">
+                <p style="font-size: 17px;">Alison Marsden</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-6">
+        <div class="team-item">
+          <div class="team-triangle">
+            <div class="team-content">
+              <img src="img/sshadden.jpeg" alt="Image of Shawn Shadden">
+              <div class="team-hover text-center"  style="cursor:pointer" id="sshadden">
+                <p style="font-size: 17px;">Shawn Shadden</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-6">
+        <div class="team-item">
+          <div class="team-triangle">
+            <div class="team-content">
+              <img src="img/nwilson.jpeg" alt="Image of Nathan Wilson">
+              <div class="team-hover text-center"  style="cursor:pointer" id="nwilson">
+                <p style="font-size: 17px;">Nathan Wilson</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-6">
+        <div class="team-item">
+          <div class="team-triangle">
+            <div class="team-content">
+              <img src="img/dparker.jpg" alt="Image of Dave Parker">
+              <div class="team-hover text-center"  style="cursor:pointer" id="dparker">
+                <p style="font-size: 17px;">Dave Parker</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-6">
+        <div class="team-item">
+          <div class="team-triangle">
+            <div class="team-content">
+              <img src="img/vvedula.jpg" alt="Image of Vijay Vedula">
+              <div class="team-hover text-center"  style="cursor:pointer" id="vvedula">
+                <p style="font-size: 17px;">Vijay Vedula</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-6">
+        <div class="team-item">
+          <div class="team-triangle">
+            <div class="team-content">
+              <img src="img/mpfaller.jpeg" alt="Image of Martin Pfaller">
+              <div class="team-hover text-center"  style="cursor:pointer" id="mpfaller">
+                <p style="font-size: 17px;">Martin Pfaller</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-12">
+        <div class="team-item">
+          <div class="team-triangle">
+            <div class="team-content">
+              <img src="img/fkong.png" alt="Image of Fanwei Kong">
+              <div class="team-hover text-center"  style="cursor:pointer" id="fkong">
+                <p style="font-size: 17px;">Fanwei Kong</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    
+    <!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <img class="teamImages" src="img/sshadden.jpg" alt="Image of Shawn Shadden">
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <img class="teamImages" src="img/nwilson.png" alt="Image of Nathan Wilson">
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <img class="teamImages" src="img/dparker.jpg" alt="Image of Dave Parker">
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <img class="teamImages" src="img/vvedula.jpg" alt="Image of Vijay Vedula">
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <img class="teamImages" src="img/Martin.Pfaller.jpg" alt="Image of Martin Pfaller">
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <img class="teamImages" src="img/fkong.png" alt="Image of Fanwei Kong">
+    </div> -->
+    
 
     <div class="newSectionContent">
       <h2 class="boxybox">the bio notes don't work :/</h2>
