--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="newSectionContent">
         <div class="row creditsRow">
           <div class="threeTopImages col-sm-6 col-12 creditContainer">
-            <img class="creditImage" src="img/stanfordmedicine.png" alt="Logo for Stanford Medicine"></img>
+            <img class="creditImage" src="img/stanfordmedicine.jpg" alt="Logo for Stanford Medicine"></img>
           </div>
           <div class="threeTopImages col-sm-6 col-12 creditContainer">
             <img class="creditImage" src="img/ucberkeley.png" alt="Logo for UC Berkeley"></img>
