finished logos and dispaly none for hero when smal

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
   <section class="notHeader">
     <div class="firstHeader row">
       <div class="homeLogoContainingDiv">
-        <img class="homeLogo" src="img/svLogoTitle.png" alt="SimVascular Logo"></img>
+        <img class="homeLogo" src="img/svLogoTitle.png" alt="Hero Image"></img>
+        <!-- <h1 style="display: inline; text-align: center;">SimVascular</h1> -->
       </div>
       <div class="introDescription col-lg-8">
         <p class="paddingIntro">The only fully opensource software package providing a complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
@@ -131,7 +132,7 @@
             <img class="creditImage" src="img/simtk.png" alt="Logo for SimTK"></img>
           </div>
           <div class="threeTopImages col-sm-4 col-12 creditContainer">
-            <img class="creditImage" src="img/nsf.jpg" alt="Logo for NSF"></img>
+            <img class="creditImage" src="img/nsf.png" alt="Logo for NSF"></img>
           </div>
         </div>
       </div>
