cleaning up css and html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@
       <div class="newSectionContent">
         <div class="col-sm-6 col-12">
           <div class="col-sm-6 col-12 headerForGalleryContainer">
-            <div class="headerForGallery"><h2><i class="fa-solid fa-image" style="padding-right: 20px"></i>Pictures</h2></div>
+            <div class="headerForGallery">
+              <h2>
+                <i class="fa-solid fa-image" style="padding-right: 20px"></i>
+                Pictures
+              </h2>
+            </div>
           </div>
           <div>
             <!-- Slideshow container -->
@@ -390,9 +395,6 @@
               <embed type="text/html" src="https://www.vascularmodel.com/" width="100%" height="100%">
             </span>
           
-          <!-- <img class="imgVMR" src="img/image1.png" alt="">
-          <img class="imgVMR" src="img/model1.png" alt="">
-          <img class="imgVMR" src="img/result1.png" alt=""> -->
       </div>
     </div>
 
