edits to carousel style

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </div>
           <div>
             <!-- Slideshow container -->
-            <div class="slideshow-container">
+            <div id="slideshow-container">
 
               <!-- Full images with numbers and message Info -->
               <div class="slides">
