adding a social media section

--- a/index.html
+++ b/index.html
@@ -113,9 +113,6 @@
       <div class="introDescription col-lg-8">
         <p class="paddingIntro">The only fully opensource software package providing a complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
         <p class="paddingIntro">The <a target="_blank" href="https://gateway.simvascular.org/">SimVascular Supercomputing Gateway</a> provides access to High-Performance Computing (HPC) clusters for running simulations using SimVascular CFD solvers. Simulations benefit from the performance levels that only large-scale HPC systems can offer and typically run an order of magnitude faster than on most workstations.</p>
-      </div>  
-      <div class="twitterContainer col-lg-4">
-        <a target="_blank" class="twitter-timeline" data-lang="en" data-theme="dark" href="https://twitter.com/simvascular?ref_src=twsrc%5Etfw">Tweets by simvascular</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      <!-- opening logo -->
       </div>
     </div>
 
@@ -330,7 +327,7 @@
                 <div class="Info">HEMI-FONTAN CAVOPULMONARY CONNECTION</div>
               </div>
               <!-- Back and forward buttons -->
-              <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
+              <a class="back" onclick="plusSlides(-1)">&#10094;</a>
               <a class="forward" onclick="plusSlides(1)">&#10095;</a>
             </div>
               <!-- The circles/dots -->
@@ -395,6 +392,51 @@
         <div class="embedYTVideo col-md-6 col-12">
           <iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PL1CBZ8Wh-xvSKUsuBA4MM4Jba-psVdxXT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
+      </div>
+    </div>
+
+
+    <div>
+      <div class="newSectionHeader">
+        <h1 id="socials">Socials</h1>
+      </div>
+      
+      <div class="newSectionContent" style="text-align: center;">
+        <h3 style="padding-bottom: 15px;" class="contactDescription">For announcements and latest news about SimVascular:</h3>
+
+        <div class="col-md-6 col-12">
+          <h2><i class="iconInHeader fa-brands fa-twitter"></i>Twitter</h2>
+          <div class="twitterContainer">
+            <h3 style="margin-bottom: 5px;" class="contactLinks">
+              <a target="_blank" class="twitter-timeline" data-lang="en" data-theme="dark" href="https://twitter.com/simvascular?ref_src=twsrc%5Etfw">Tweets by simvascular</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      <!-- opening logo -->
+            </h3> 
+            </div>
+        </div>
+        <div class= "col-md-6 col-12">
+          <div style="padding-bottom: 15px">
+            <h2><i class="iconInHeader fa-brands fa-facebook"></i>Facebook</h2>
+            <h3 style="margin-bottom: 5px;" class="contactLinks">
+              <a href="https://www.facebook.com/groups/835227759855853/ target="_blank">Visit our Facebook page</a>
+            </h3>
+          </div> 
+          <div style="padding-bottom: 15px">
+            <h2><i class="iconInHeader fa-brands fa-youtube"></i>Youtube</h2>
+            <p class="contactDescription">The SimVascular YouTube Channel has a collection of videos on a variety of topics related to the use of the SimVascular suite of software applications.</p>
+            <h3 style="margin-bottom: 5px;" class="contactLinks">
+              <a href="https://www.youtube.com/channel/UCT61XgTRqpfb39Hyio9IqGQ" target="_blank">Visit our Youtube channel</a>
+            </h3>
+          </div>
+          <div style="padding-bottom: 15px">
+            <h2><i class="iconInHeader fa-solid fa-envelope"></i>News mailing list</h2>
+            <h3 style="margin-bottom: 5px;" class="contactLinks">
+              <a href="https://simtk.org/mailman/listinfo/simvascular-news" target="_blank">Sign up for updates</a>
+            </h3>
+            <h3 style="margin-bottom: 5px;" class="contactLinks">
+              <a href="https://simtk.org/pipermail/simvascular-news/" target="_blank">View the Simvascular News Archive</a>
+            </h3>
+          </div>
+        </div>
+        
       </div>
     </div>
 
