switched name for notHeader

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
     </div>
   </section>
-  <section class="notHeader">
+  <section class="body">
     <div class="firstHeader row">
       <div class="homeLogoContainingDiv">
         <img class="homeLogo" src="img/svLogoTitle.png" alt="Hero Image"></img>
