styling still does not work, fixed picture

--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -38,7 +38,11 @@
     <form class="mainBody"> 
       <zero-md src="/documentation/quickguide/_getting_started.md"></zero-md>
       <zero-md src="/documentation/quickguide/_intro.md"></zero-md>
-      <zero-md src="/documentation/quickguide/_intro_pipeline.md"></zero-md>
+      <zero-md src="/documentation/quickguide/_intro_pipeline.md">
+        <template>
+        <link rel="stylesheet" href="/mdStyle.css" />
+        </template>
+      </zero-md>
       <zero-md src="/documentation/quickguide/_intro_tools.md"></zero-md>
       <zero-md src="/documentation/quickguide/_intro_projects.md"></zero-md>
       <zero-md src="/documentation/quickguide/_intro_mitk.md"></zero-md>
