--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -18,7 +18,7 @@
 
   <script>
     window.ZeroMdConfig = {
-      cssUrls: ['/css/bootstrap.css', "/css/grayscale.css", "/css/standards.css", "/css/documentation.css"]
+      cssUrls: ['/css/bootstrap.css', "/css/grayscale.css", "/css/standards.css", "/css/shop-item.css", "/css/documentation.css"]
     }
   </script>
 
@@ -40,7 +40,7 @@
       </div>
     </section>
   <section class="mainSection row">
-    <div class="col-md-3 navigationSection" style="float: left">
+    <section class="col-md-4 col-lg-3 navigationSection" style="float: left">
       <div>
         <h4 class="skipTo" id="skipTo_intro">Introduction</h4>
         <div>
@@ -79,9 +79,9 @@
       <div>
         <h4 id="skipToTop">Skip To Top</h4>
       </div>
-    </div>
+    </section>
 
-    <div class="col-md-9 docsSection" style="float: right"> 
+    <div class="col-md-8 col-lg-9 docsSection" style="float: right"> 
       <span id="_getting_started">
         <zero-md src="/documentation/quickguide/_getting_started.md"></zero-md>
       </span>
